--- a/src/main/resources/templates/admin/companysmanage/CompanysRegister.html
+++ b/src/main/resources/templates/admin/companysmanage/CompanysRegister.html
@@ -16,14 +16,22 @@
         <div class="col-10">
             <div class="userInfo-main w-100 m-auto">
                 <h3>탐정 상세정보</h3>
-                <form method="POST" th:action="@{/admin/detectiveManage/detectiveInfo.up}" class="form needs-valdiation">              
+                <form method="POST" th:action="@{/admin/companysManager/companysRegister.process}" class="form needs-valdiation">              
                 <div class="row">
+                    <div class="col">
+                        <label class="form-label" for="usersName">대표 회원번호</label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" id="usersName" name="companysCeoIdx" placeholder="대표명">
+                        </div>
+                    </div>
                     <div class="col">
                         <label class="form-label" for="usersName">대표명</label>
                         <div class="input-group has-validation">
                             <input type="text" class="form-control" id="usersName" name="usersName" placeholder="대표명">
                         </div>
-                    </div>                    
+                    </div>
+                </div>
+                <div class="row">                
                     <div class="col">
                         <label class="form-label" for="companysName">업체명</label>
                         <div class="input-group has-validation">
@@ -53,14 +61,14 @@
                     <div class="col">
                         <label class="form-label" for="usersPhone">대표 연락처</label>
                         <div class="input-group has-validation">
-                            <input type="text" class="form-control" id="usersPhone" name="usersPhone" placeholder="대표 연락처">
+                            <input type="text" class="form-control" id="usersPhone" name="companysPhone" placeholder="대표 연락처">
                         </div>
                     </div>                    
                 </div>
                 <div class="row">
                     <div class="col">
                         <label class="form-label" for="companysComment">업체 소개</label>                       
-                        <input type="text" class="form-control" id="companysComment" name="companysComponent">
+                        <input type="text" class="form-control" id="companysComment" name="companysComment">
                     </div>
                 </div>
                 <div class="row">
@@ -104,7 +112,7 @@
                 </div>                    
                 <br/>
                 <div class="">
-                    <input type="submit" class="btn btn-primary" value="수정"/>
+                    <input type="submit" class="btn btn-primary" value="등록"/>
                     <input type="reset" id="cancleBtn" class="btn btn-light" value="취소"/>
                 </div>
                 </form>
