[관리자페이지] 업체(탐정) 등록시 활동지역, 활동분야 각각 테이블 rows 삽입

--- a/src/main/resources/templates/admin/companysmanage/CompanysRegister.html
+++ b/src/main/resources/templates/admin/companysmanage/CompanysRegister.html
@@ -19,15 +19,15 @@
                 <form method="POST" th:action="@{/admin/companysManager/companysRegister.process}" class="form needs-valdiation">              
                 <div class="row">
                     <div class="col">
-                        <label class="form-label" for="usersName">대표 회원번호</label>
+                        <label class="form-label" for="companysCeoIdx">대표 회원번호</label>
                         <div class="input-group has-validation">
-                            <input type="text" class="form-control" id="usersName" name="companysCeoIdx" placeholder="대표명">
+                            <input type="text" class="form-control" id="companysCeoIdx" name="companysCeoIdx" placeholder="대표회원번호">
                         </div>
                     </div>
                     <div class="col">
-                        <label class="form-label" for="usersName">대표명</label>
+                        <label class="form-label" for="companysCeoName">대표명</label>
                         <div class="input-group has-validation">
-                            <input type="text" class="form-control" id="usersName" name="usersName" placeholder="대표명">
+                            <input type="text" class="form-control" id="companysCeoName" name="companysCeoName" placeholder="대표명">
                         </div>
                     </div>
                 </div>
