관리자페이지 SUPER_ADMIN의 새로운 관리자 추가기능 반영

--- a/src/main/resources/templates/admin/adminmanage/adminAddForm.html
+++ b/src/main/resources/templates/admin/adminmanage/adminAddForm.html
@@ -12,16 +12,19 @@
 			<nav th:replace="admin/fragments/html-sidebar.html :: html-sidebar" />
 		</div>
 		<div class="col-10">
-			<div class="index-main container text-center">
-				<h3 class="h3">관리자 페이지</h3>
-				<div th:if="${user} != null">				
-				<form class="form" method="POST" th:action="@{/admin/adminUpdate}">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col">
+						<h3 class="h3">운영자 추가</h3>
+					</div>					
+				</div>
+				<form class="form" method="POST" th:action="@{/admin/adminAddProcess}">
 				<div class="row invisible-row">
 					<div class="col-3 text-start">
 						<label for="usersIdx">회원번호</label>						
 					</div>
 					<div class="col-9 text-start">
-						<input type="text" size="30" id="usersIdx" name="usersIdx" th:value="${user.usersIdx}" readonly/>
+						<input type="text" size="30" id="usersIdx" name="usersIdx" />
 					</div>				
 				</div>
 				<div class="row">
@@ -29,7 +32,7 @@
 						<label for="usersAccount">아이디</label>						
 					</div>
 					<div class="col-9 text-start">
-						<input type="text" size="30" id="usersAccount" name="usersAccount" th:value="${user.usersAccount}"/>
+						<input type="text" size="30" id="usersAccount" name="usersAccount" />
 					</div>				
 				</div>
 				<div class="row">
@@ -53,7 +56,7 @@
 						<label for="usersName">이름</label>
 					</div>
 					<div class="col-9 text-start">
-						<input type="text" size="30" id="usersName" name="usersName" th:value="${user.usersName}" />
+						<input type="text" size="30" id="usersName" name="usersName" />
 					</div>
 				</div>
 				<div class="row">
@@ -61,7 +64,7 @@
 						<label for="usersPhone">연락처</label>
 					</div>
 					<div class="col-9 text-start">
-						<input type="text" size="30" id="usersPhone" name="usersPhone" th:value="${user.usersPhone}" />
+						<input type="text" size="30" id="usersPhone" name="usersPhone" />
 					</div>
 				</div>
 				<div class="row">
@@ -69,21 +72,29 @@
 						<label for="usersEmail">이메일</label>
 					</div>
 					<div class="col-9 text-start">
-						<input type="text" size="30" id="usersEmail" name="usersEmail" th:value="${user.usersEmail}" />
+						<input type="text" size="30" id="usersEmail" name="usersEmail" />
 					</div>
 				</div>
-				<br/>
-				<br/>
+				<div class="row">
+					<div class="col-3 text-start">
+						<label for="usersRole">운영자 등급</label>
+					</div>
+					<div class="col-9 text-start">
+						<label for="ADMIN">ADMIN</label>
+						<input type="radio" size="30" id="ADMIN" name="usersRole" value="ADMIN"/>
+						<label for="SUPER_ADMIN">SUPER_ADMIN</label>
+						<input type="radio" size="30" id="SUPER_ADMIN" name="usersRole" value="SUPER_ADMIN"/>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col text-end">
-						<input type="submit" class="btn btn-primary" value="수정" />
+						<input type="submit" class="btn btn-primary" value="등록" />
 					</div>
 					<div class="col text-start">
 						<input type="reset" id="cancleBtn" class="btn" value="취소" />
 					</div>
 				</div>
 				</form>
-				</div>
 			</div>
 		</div>
 	</div>
