[관리자페이지] 회원(의뢰인, 탐정) 관리 완료

--- a/src/main/resources/templates/admin/usersmanage/detective/DetectiveList.html
+++ b/src/main/resources/templates/admin/usersmanage/detective/DetectiveList.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="stylesheet" href="/assets/css/usersmanage/UsersManage.css" />
-<title>회원 관리 페이지</title>
+<title>탐정 회원 관리 페이지</title>
 </head>
 <head th:replace="admin/fragments/html-head.html :: html-head" />
 <body>
@@ -15,20 +15,25 @@
         </div>
         <div class="col">
         <div class="container text-center">
-            <h3>회원 관리</h3>
+            <h3>탐정 관리</h3>
             <div class="row">
                 <div class="col align-self-start">
                 </div>
                 <div class="col align-self-center">
-                    <button class="btn btn-light" id="allListBtn">전체</button>
-                    <button class="btn btn-light" id="withdrawalBtn" active>탈퇴</button>
+                    <button class="btn btn-light active">전체</button>
+                    <button class="btn btn-light" id="withdrawalBtn">탈퇴</button>
                 </div>
                 <div class="col align-self-end">
                 </div>
             </div>
             <div class="row">
+                <div class="col-1">
+                    <span th:if="${allPostCount} != null">전체 [[${allPostCount}]]</span>
+                </div>
                 <div class="col">
-
+                    <button id="detectiveList" class="btn btn-light active">탐정</button>
+                    <button id="clientList" class="btn btn-light">의뢰인</button>
+                    <button id="tempList" class="btn btn-light">비회원</button>
                 </div>
                 <div class="col-4">
                     <div class="input-group">            
@@ -39,7 +44,7 @@
             </div>
             <form method="GET" action="/admin/usersManage/findByUsersAccount">            
             </form>
-            <br/>          
+            <br/>                      
             <div class="tableDiv">
                 <table class="table">
                     <thead>
@@ -69,22 +74,22 @@
                 <nav th:if="${pagination} != null">
                     <ul class="pagination">
                         <li th:if="${pagination.blockCount < currentPage}">
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.previousBlock})}">
+                            <a class="page-link" th:href="@{/admin/usersManage/detectiveList(currentPage=${pagination.previousBlock})}">
                                 PREV
                             </a>
                         </li>              
                         <li class="page-item" th:if="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.lastBlock)}">                           
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                            <a class="page-link" th:href="@{/admin/usersManage/detectiveList(currentPage=${page})}">
                                 [[${page}]]
                             </a>
                         </li>                 
                         <li class="page-item" th:unless="${pagination.lastBlock < pagination.blockLast}" th:each="page : ${#numbers.sequence(pagination.blockFirst, pagination.blockLast)}">                           
-                            <a class="page-link" th:href="@{/admin/usersManage/usersList(currentPage=${page})}">
+                            <a class="page-link" th:href="@{/admin/usersManagedetectiveList(currentPage=${page})}">
                                 [[${page}]]
                             </a>
                         </li>
                         <li th:if="${currentPage <= pagination.lastBlock}">
-                            <a class="page-link" th:if="${pagination.lastBlock > pagination.blockLast}" th:href="@{/admin/usersManage/usersList(currentPage=${pagination.nextBlock})}">
+                            <a class="page-link" th:if="${pagination.lastBlock > pagination.blockLast}" th:href="@{/admin/usersManage/detectiveList(currentPage=${pagination.nextBlock})}">
                                 NEXT
                             </a>
                         </li>
@@ -104,9 +109,14 @@
 </div>
 </body>
 <script>
-const ALLLIST_BTN = document.querySelector("#allListBtn");
-ALLLIST_BTN.addEventListener("click", () => {
-    window.location.href="/admin/usersManage/usersList";
+const WITHDRAWAL_BTN = document.querySelector("#withdrawalBtn");
+WITHDRAWAL_BTN.addEventListener("click", () => {
+    window.location.href="/admin/usersManage/withdrawalDetectiveList";
+})
+
+const DETECTIVE_LIST_BTN = document.querySelector("#clientList");
+DETECTIVE_LIST_BTN.addEventListener("click", () => {
+    window.location.href="/admin/usersManage/clientList";
 })
 
 </script>
