--- a/src/main/resources/templates/admin/companysmanage/CompanysInfo.html
+++ b/src/main/resources/templates/admin/companysmanage/CompanysInfo.html
@@ -71,7 +71,21 @@
                         <label class="form-label" for="companysSpec">업체 상세 소개</label>                       
                         <textarea class="form-control" id="companysSpec" name="companysSpec"></textarea>
                     </div>
-                </div>                    
+                </div>
+                <div class="row">
+                    <div class="col" id="companysCategoryCheckbox">
+                        <label class="form-label" for="companysCategory">분야 선택</label>
+                        <br/>
+                        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" id="companysActiveRegionCheckbox">
+                        <label class="form-label" for="companysActiveRegion">활동 지역</label>
+                        <br/>
+                        
+                    </div>
+                </div>                   
                 <br/>
                 <div class="">
                     <input type="submit" class="btn btn-primary" value="수정"/>
@@ -83,6 +97,8 @@
     </div>
 </div>
 </body>
-<!-- <script type="module" th:src="@{/assets/js/UsersInfo.js}"></script>-->
+<script type="module" src="/assets/js/admin/CompanysCategoryCheckbox.js"></script>
+<script type="module" src="/assets/js/admin/CompanysActiveRegion.js"></script>
+<script type="module" src="/assets/js/admin/CompanysLocalPremiumRegion.js"></script>
 <script type="text/javascript" src="/assets/js/admin/CancleBtn.js"></script>
 </html>
