[관리자페이지] 회사 조회시 3개의 테이블 조인 반영

--- a/src/main/resources/templates/admin/companysmanage/CompanysList.html
+++ b/src/main/resources/templates/admin/companysmanage/CompanysList.html
@@ -61,8 +61,9 @@
                             </td>
                             <td>[[${companysList.companysCeoName}]]</td>
                             <td>[[${companysList.companysPhone}]]</td>
-                            <td>분야</td>
-                            <td>지역</td>
+                            <td th:if="${companysList.companysCategory[0].length} < 5">[[${companysList.companysCategory[0]}]]</td>
+                            <td th:unless="${companysList.companysCategory[0].length} < 5">[[${#strings.substring(companysList.companysCategory[0], 0, 5)}]]...</td>
+                            <td>[[${companysList.companysRegion1}]]</td>
                             <td th:if="${companysList.companysEnabled} == true">승인</td>
                             <td th:unless="${companysList.companysEnabled} == true">미승인</td>
                             <td th:if="${companysList.companysPremium} == true">적용</td>
